		 Bug fix in restart file name
                 Read modified restart format
Jul 16 1998	 Change default value of xpndw to 0.2 nm
Aug 07 1998	 Initilization bug fix in pre_misfit
Aug 07 1998	 Initilization bug fix in pre_short
Aug 10 1998	 Add missing initialization angle constraints
Aug 13 1998	 Add POx in charge determination
Aug 18 1998	 Repair memory leak in pre_charge
		 Initialization bug fix in pre_mklist
		 Destroy geometry object when no longer needed in pre_mkseq
Aug 24 1998	 Add OH charge separation
		 Resolve varying number arguments
		 Single quote strings
Aug 26 1998	 Bug fix in pre_rdrst.F
Aug 28 1998	 Write out segment charges when writing topology file
Sep 11 1998	 Fix bugs in crystalwater coordinate from pdb
		 Fixes in PDB format statements
		 Allow choice of alternate location and chain id
		 Disallow bonds to Na, Mg, K and Ca
		 Default HIS to HID for amber when reading PDB without hydrogens
Sep 14 1998	 Option to limit CYS -> CYX to SS-bridges
		 Fix in chain links
		 Option to enforce link through LINK in sequence file
		 Bug fix in segments length for last segment frg's
Sep 16 1998	 Count LINK's to get dimension mlnk in seqsiz
		 Recode pre_mklist to allow and identify multiple node
		 bonded interactions
Sep 17 1998	 Add modify commands for bonded interaction parameters
		 Corrected missing atom algorithm
Sep 18 1998	 Make links on pdb files forced
Sep 22 1998      Fix incorrect format in pre_wrtpdb
	         Allow solvent on PDB to be written as ATOM cards
Sep 23 1998      Allow non-AA atom naming from PDB
		 Write solvent number on i6 (deviates from PDB convention)
		 Fix use of fraction in sequence file
Sep 24 1998	 Fix bug in read pdb file commands
		 Set fixed atom types to 2
Oct 05 1998	 Fix bug in parameter search
Oct 30 1998      Minor change in fix logic
Nov 06 1998	 Add err= jump in close of lfncmd
	         Indexed charge/polarization parameters from topology file
Nov 17 1998	 Truncated octahedron